[gd_scene load_steps=32 format=3 uid="uid://dfr2pcw7l4goo"]

[ext_resource type="Theme" uid="uid://b511ckv5t4uuq" path="res://telas/interface/assets/temas/tema_padrao.tres" id="1_rl6uu"]
[ext_resource type="Script" uid="uid://cro5dfjqd54no" path="res://telas/minigames/bio_escudo/Scripts/fur.gd" id="2_m8jyd"]
[ext_resource type="Script" uid="uid://cfxki2ber7m7l" path="res://telas/minigames/bio_escudo/Scripts/character_creator.gd" id="2_rq37i"]
[ext_resource type="Texture2D" uid="uid://c7y2otcqpymp8" path="res://telas/minigames/bio_escudo/assets/urso.png" id="4_dvuka"]
[ext_resource type="Script" uid="uid://extdbho38y4u" path="res://telas/minigames/bio_escudo/Scripts/pants.gd" id="4_yiodc"]
[ext_resource type="Script" uid="uid://mm3i7cj4hp28" path="res://telas/minigames/bio_escudo/Scripts/outfit.gd" id="6_e0whd"]
[ext_resource type="Texture2D" uid="uid://d1vkuuoersllj" path="res://telas/minigames/bio_escudo/assets/calca/calca.png" id="7_63ikp"]
[ext_resource type="Texture2D" uid="uid://c166ftpe3ntvw" path="res://telas/minigames/bio_escudo/assets/acess/doctor_equip.acess.png" id="8_0wdj4"]
[ext_resource type="Script" uid="uid://cl5yc06quc1ml" path="res://telas/minigames/bio_escudo/Scripts/accessory.gd" id="8_f5n3g"]
[ext_resource type="Texture2D" uid="uid://cinkbccw6rm7h" path="res://telas/minigames/bio_escudo/assets/UI/button_roupa_icon.png" id="9_m8jyd"]
[ext_resource type="Texture2D" uid="uid://lch478hnhjor" path="res://telas/minigames/bio_escudo/bg.png" id="9_s36mj"]
[ext_resource type="Texture2D" uid="uid://cq5ksinhb8sec" path="res://telas/minigames/bio_escudo/assets/UI/button_acces_icon.png" id="10_5xme0"]
[ext_resource type="Texture2D" uid="uid://cdu2sodbliher" path="res://telas/minigames/bio_escudo/assets/UI/button_pants_icon.png" id="10_08kba"]
[ext_resource type="Texture2D" uid="uid://rdbagkgxn0fd" path="res://telas/minigames/bio_escudo/assets/UI/button_roupa_pressed.icon.png" id="10_bgq41"]
[ext_resource type="Texture2D" uid="uid://3duidh7c3tjt" path="res://telas/minigames/bio_escudo/assets/UI/Next.png" id="10_yiodc"]
[ext_resource type="Texture2D" uid="uid://dgsprdhhew871" path="res://telas/minigames/bio_escudo/assets/UI/button_acces_pressed.icon.png" id="11_bgq41"]
[ext_resource type="Texture2D" uid="uid://6notyhftw3or" path="res://telas/minigames/bio_escudo/assets/UI/button_pants_pressed.icon.png" id="11_rjla7"]
[ext_resource type="Texture2D" uid="uid://dl4ddgtq52jcy" path="res://telas/minigames/bio_escudo/assets/UI/Nextpressed.png" id="11_yiodc"]
[ext_resource type="Texture2D" uid="uid://tr3nu003qawl" path="res://telas/minigames/bio_escudo/assets/UI/button_pants_hover.icon.png" id="12_dvuka"]
[ext_resource type="Texture2D" uid="uid://clsbe3nqk0ipn" path="res://telas/minigames/bio_escudo/assets/UI/button_finished_icon.png" id="21_guhsu"]
[ext_resource type="Texture2D" uid="uid://b7fomj25bh55f" path="res://telas/minigames/bio_escudo/assets/UI/button_finished_pressed.icon.png" id="22_63ikp"]
[ext_resource type="Texture2D" uid="uid://mftuwbcmkc23" path="res://telas/minigames/bio_escudo/assets/UI/button_finished_hover.icon.png" id="23_saf70"]
[ext_resource type="Script" uid="uid://b07lra83yt6hi" path="res://telas/minigames/bio_escudo/Scripts/finished_button.gd" id="25_saf70"]
[ext_resource type="PackedScene" uid="uid://c54b3wvhi88m6" path="res://telas/minigames/bio_escudo/Scenes/tutorial_popup.tscn" id="27_cwrvc"]
[ext_resource type="Theme" uid="uid://cy5rvrhoo14d8" path="res://telas/interface/assets/temas/tema_flecha_voltar.tres" id="27_k2tda"]
[ext_resource type="Texture2D" uid="uid://camw6mfh0etks" path="res://telas/minigames/bio_escudo/Tutorial_Popup_assets/ursinho box clean.png" id="27_u2yq3"]
[ext_resource type="Texture2D" uid="uid://bepd6haiepykj" path="res://telas/interface/assets/imagens/pop_up_flecha.png" id="28_boh2v"]
[ext_resource type="FontFile" uid="uid://cmajfe8761ay" path="res://telas/minigames/bio_escudo/assets/fonts/JungleAdventurer.ttf" id="28_cwrvc"]
[ext_resource type="Script" path="res://telas/minigames/bio_escudo/Scripts/camera_2d.gd" id="30_u2yq3"]
[ext_resource type="AudioStream" uid="uid://bl0xmmjvv7xuj" path="res://telas/minigames/bio_escudo/assets/sounds/La-la-lalala.mp3" id="33_my31c"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_m8jyd"]

[node name="CharacterCreator" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_rl6uu")
script = ExtResource("2_rq37i")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_s36mj")

[node name="skeleton" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = -314.0
offset_bottom = -314.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.18749, 1.2996)
metadata/_edit_use_anchors_ = true

[node name="Fur" type="Control" parent="skeleton"]
layout_mode = 1
anchors_preset = 0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("2_m8jyd")
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="skeleton/Fur"]
scale = Vector2(1.0086, 1.00483)
texture = ExtResource("4_dvuka")
hframes = 3
vframes = 2

[node name="Outfit2" type="Control" parent="skeleton"]
anchors_preset = 0
script = ExtResource("4_yiodc")
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="skeleton/Outfit2"]
texture = SubResource("CompressedTexture2D_m8jyd")
hframes = 3
vframes = 2

[node name="Pants" type="Control" parent="skeleton"]
anchors_preset = 0
script = ExtResource("6_e0whd")
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="skeleton/Pants"]
scale = Vector2(1.03657, 1)
texture = ExtResource("7_63ikp")
hframes = 3
vframes = 2

[node name="accessory" type="Control" parent="skeleton"]
anchors_preset = 0
script = ExtResource("8_f5n3g")
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="skeleton/accessory"]
position = Vector2(29.7144, -33.7453)
scale = Vector2(0.529328, 0.518967)
texture = ExtResource("8_0wdj4")
region_rect = Rect2(10, 10, 10, 10)

[node name="CreatorScreen" type="CanvasLayer" parent="."]

[node name="ChangePantsButton" type="TextureButton" parent="CreatorScreen"]
anchors_preset = -1
anchor_left = 0.00972222
anchor_top = 0.373
anchor_right = 0.266
anchor_bottom = 0.53
offset_top = 0.160034
offset_right = 473.48
offset_bottom = 358.6
scale = Vector2(0.279999, 0.319999)
texture_normal = ExtResource("10_08kba")
texture_pressed = ExtResource("11_rjla7")
texture_hover = ExtResource("12_dvuka")
metadata/_edit_use_anchors_ = true

[node name="PantsColorButton" type="TextureButton" parent="CreatorScreen/ChangePantsButton"]
layout_mode = 0
anchor_left = 0.0835866
anchor_top = 0.683712
anchor_right = 0.966565
anchor_bottom = 1.44508
texture_normal = ExtResource("10_yiodc")
texture_pressed = ExtResource("11_yiodc")
metadata/_edit_use_anchors_ = true

[node name="ChangeShirtButton" type="TextureButton" parent="CreatorScreen"]
anchors_preset = -1
anchor_left = 0.047
anchor_top = 0.157
anchor_right = 0.399
anchor_bottom = 0.363
offset_left = 0.159985
offset_top = 0.439987
offset_right = 374.72
offset_bottom = 208.96
scale = Vector2(0.403152, 0.514285)
texture_normal = ExtResource("9_m8jyd")
texture_pressed = ExtResource("10_bgq41")
metadata/_edit_use_anchors_ = true

[node name="ShirtColorButton" type="TextureButton" parent="CreatorScreen/ChangeShirtButton"]
layout_mode = 0
anchor_left = -0.10962
anchor_top = 0.478216
anchor_right = 0.455595
anchor_bottom = 1.1957
offset_right = 273.044
offset_bottom = 354.766
scale = Vector2(0.565216, 0.465714)
texture_normal = ExtResource("10_yiodc")
texture_pressed = ExtResource("11_yiodc")
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="ChangeAccesButton" type="TextureButton" parent="CreatorScreen"]
anchors_preset = -1
anchor_left = 0.705556
anchor_top = 0.147
anchor_right = 1.016
anchor_bottom = 0.361
offset_top = 0.240143
offset_right = 256.48
offset_bottom = 156.12
scale = Vector2(0.465553, 0.596705)
texture_normal = ExtResource("10_5xme0")
texture_pressed = ExtResource("11_bgq41")
metadata/_edit_use_anchors_ = true

[node name="AccesColorButton" type="TextureButton" parent="CreatorScreen/ChangeAccesButton"]
layout_mode = 0
anchor_left = -0.107399
anchor_top = 0.619248
anchor_right = 0.479737
anchor_bottom = 1.09339
offset_right = 181.174
offset_bottom = 210.509
scale = Vector2(0.608695, 0.465714)
texture_normal = ExtResource("10_yiodc")
texture_pressed = ExtResource("11_yiodc")
metadata/_edit_use_anchors_ = true

[node name="finishedButton" type="TextureButton" parent="CreatorScreen"]
anchors_preset = -1
anchor_left = 0.720833
anchor_top = 0.736111
anchor_right = 0.994611
anchor_bottom = 0.92637
offset_right = 250.88
offset_bottom = 261.52
scale = Vector2(0.44, 0.44)
texture_normal = ExtResource("21_guhsu")
texture_pressed = ExtResource("22_63ikp")
texture_hover = ExtResource("23_saf70")
script = ExtResource("25_saf70")
metadata/_edit_use_anchors_ = true

[node name="TutorialPopup" parent="CreatorScreen" instance=ExtResource("27_cwrvc")]

[node name="TextureRect2" type="TextureRect" parent="CreatorScreen"]
visible = false
anchors_preset = -1
anchor_left = 0.1
anchor_right = 1.0
anchor_bottom = 0.355556
grow_horizontal = 0
texture = ExtResource("27_u2yq3")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="CreatorScreen/TextureRect2"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0941358
anchor_top = 0.570313
anchor_right = 0.705247
anchor_bottom = 0.708333
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.988235)
theme_override_fonts/font = ExtResource("28_cwrvc")
theme_override_font_sizes/font_size = 25
text = "Oi, amiguinho! Que bom te ver de novo! 
 Vamos vestir o jaleco de doutor? 
No ursinho amigo?"
metadata/_edit_use_anchors_ = true

[node name="TextureButton" type="TextureButton" parent="CreatorScreen/TextureRect2"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00617284
anchor_top = 0.742188
anchor_right = 0.153595
anchor_bottom = 0.990056
offset_right = 352.471
offset_bottom = 371.818
scale = Vector2(0.213235, 0.203815)
texture_normal = ExtResource("21_guhsu")
metadata/_edit_use_anchors_ = true

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0250602
anchor_top = 0.0176223
anchor_right = 0.254227
anchor_bottom = 0.162993
offset_left = -0.0433578
offset_top = -0.0320969
offset_right = -0.043396
offset_bottom = -0.032135
metadata/_edit_use_anchors_ = true

[node name="BotaoVoltar" type="Button" parent="AspectRatioContainer"]
layout_mode = 2
theme = ExtResource("27_k2tda")
text = "
"
autowrap_mode = 1
icon_alignment = 1
expand_icon = true
text_direction = 3
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="AspectRatioContainer/BotaoVoltar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.131
anchor_top = 0.15
anchor_right = 0.869
anchor_bottom = 0.813
offset_left = 57.933
offset_top = 54.946
offset_right = -57.933
offset_bottom = -49.137
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("28_boh2v")
metadata/_edit_lock_ = true

[node name="Musica_fundo" type="AudioStreamPlayer" parent="."]
stream = ExtResource("33_my31c")
volume_db = -15.0
autoplay = true

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
limit_smoothed = true
script = ExtResource("30_u2yq3")

[connection signal="pressed" from="CreatorScreen/ChangePantsButton" to="skeleton/Outfit2" method="_on_collection_button_pressed"]
[connection signal="pressed" from="CreatorScreen/ChangePantsButton/PantsColorButton" to="skeleton/Outfit2" method="_on_color_button_pressed"]
[connection signal="pressed" from="CreatorScreen/ChangeShirtButton" to="skeleton/Pants" method="_on_collection_button_pressed"]
[connection signal="pressed" from="CreatorScreen/ChangeShirtButton/ShirtColorButton" to="skeleton/Pants" method="_on_color_button_pressed"]
[connection signal="pressed" from="CreatorScreen/ChangeAccesButton" to="skeleton/accessory" method="_on_collection_button_pressed"]
[connection signal="pressed" from="CreatorScreen/ChangeAccesButton/AccesColorButton" to="skeleton/accessory" method="_on_color_button_pressed"]
[connection signal="pressed" from="CreatorScreen/finishedButton" to="CreatorScreen/finishedButton" method="_on_pressed"]
[connection signal="pressed" from="AspectRatioContainer/BotaoVoltar" to="." method="_on_botao_voltar_pressed"]
